truck-kun improved

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <!-- Image -->
   <section class="hero-image">
-    <img src="truck-kun.png" alt="Όχημα Αποφράξεις Ισλαμίδης">
+    <img src="truck-kun.jpg" alt="Όχημα Αποφράξεις Ισλαμίδης">
   </section>
 
   <!-- Services -->
