--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Αποφράξεις Ισλαμίδης</title>
+  <meta name="description" content="Αποφράξεις Θεσσαλονίκη από τον Παντελή: γρήγορη εξυπηρέτηση 24/7, εγγύηση ποιότητας. Επικοινωνήστε τώρα.">
+  <title>Αποφράξεις Θεσσαλονίκη – Παντελής</title>
   <style>
     /* Reset & Base */
     * { margin: 0; padding: 0; box-sizing: border-box; }
