--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
   <!-- Hero -->
   <section class="hero">
     <div class="hero-content">
-      <h1>Αποφράξεις Ισλαμίδης</h1>
+      <h1>Αποφράξεις Παντελής</h1>
       <p>Εξειδίκευση σε κάθε φραγή σωληνώσεων – μπάνια, κουζίνες, φρεάτια, αποχετεύσεις. Άμεση 24/7 εξυπηρέτηση με σύγχρονο εξοπλισμό.</p>
-      <a class="btn-primary" href="tel:+306969696969">Καλέστε τώρα: 6969696969</a>
+      <a class="btn-primary" href="tel:+306934078232">Καλέστε τώρα: 6934078232</a>
     </div>
   </section>
 
   <!-- Image -->
   <section class="hero-image">
-    <img src="truck-kun.jpg" alt="Όχημα Αποφράξεις Ισλαμίδης">
+    <img src="truck-kun.jpg" alt="Όχημα Αποφράξεις Παντελής">
   </section>
 
   <!-- Services -->
@@ -111,7 +111,7 @@
 
   <!-- Footer -->
   <footer>
-    &copy; 2025 Αποφράξεις Ισλαμίδης | Εμπιστευτείτε μας, λύση στις φράξεις άμεσα!
+    &copy; 2025 Αποφράξεις Παντελής | Εμπιστευτείτε μας, λύση στις φράξεις άμεσα!
   </footer>
 </body>
 </html>
