--- a/index.html
+++ b/index.html
@@ -70,6 +70,22 @@
     @media (max-width: 1024px) { .services .grid { grid-template-columns: repeat(2, 1fr); } }
     @media (max-width: 600px) { .services .grid { grid-template-columns: 1fr; } }
   </style>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Αποφράξεις Παντελής",
+    "image": "https://…/truck-kun.jpg",
+    "telephone": "+306934078232",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Θεσσαλονίκη",
+      "addressCountry": "GR"
+    },
+    "openingHours": ["Mo,Tu,We,Th,Fr 08:00-18:00","Sa 10:00-17:00"],
+    "url": "https://tislamidis.github.io/apofraxeis-thessaloniki/"
+  }
+  </script>
 </head>
 <body>
   <!-- Hero -->
