--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Αποφράξεις Θεσσαλονίκη από τον Παντελή: γρήγορη εξυπηρέτηση 24/7, εγγύηση ποιότητας. Επικοινωνήστε τώρα.">
+  <meta name="description" content="Αποφράξεις Θεσσαλονίκη από τον Παντελή: γρήγορη εξυπηρέτηση, εγγύηση ποιότητας. Επικοινωνήστε τώρα.">
   <title>Αποφράξεις Θεσσαλονίκη – Παντελής</title>
   <style>
     /* Reset & Base */
@@ -92,7 +92,7 @@
   <section class="hero">
     <div class="hero-content">
       <h1>Αποφράξεις Παντελής</h1>
-      <p>Εξειδίκευση σε κάθε φραγή σωληνώσεων – μπάνια, κουζίνες, φρεάτια, αποχετεύσεις. Άμεση 24/7 εξυπηρέτηση με σύγχρονο εξοπλισμό.</p>
+      <p>Εξειδίκευση σε κάθε φραγή σωληνώσεων – μπάνια, κουζίνες, φρεάτια, αποχετεύσεις. Άμεση εξυπηρέτηση με σύγχρονο εξοπλισμό.</p>
       <a class="btn-primary" href="tel:+306934078232">Καλέστε τώρα: 6934078232</a>
     </div>
   </section>
