--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="el">
 <head>
   <meta charset="UTF-8">
+  <link rel="canonical" href="https://theodorosislamidis.github.io/apofraxeis-thessaloniki/" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Αποφράξεις Θεσσαλονίκη από τον Παντελή: γρήγορη εξυπηρέτηση, εγγύηση ποιότητας. Επικοινωνήστε τώρα.">
   <title>Αποφράξεις Θεσσαλονίκη – Παντελής</title>
